[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sipmarray"
version = "0.1"
authors = [{ name="Ricardo Peres", email="rperes@physik.uzh.ch"},]
description = "A simple package to get the geometry of SiPM arrays."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3-Clause license",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ricmperes/sipmarray"
"Bug Tracker" = "https://github.com/ricmperes/sipmarray/issues"